2007-12-08  Jerry James  <james@xemacs.org>

	* config.guess:
	* config.sub: Sync with the latest upstream versions.

2007-12-12  Aidan Kehoe  <kehoea@parhasard.net>

	* configure.ac :
	Check for FcConfigGetRescanInterval, FcConfigSetRescanInterval.
	* configure :
	Rebuild.

2007-08-27  Mike Sperber  <mike@xemacs.org>

	* configure.ac: Try to use pkg-config for finding Xft includes and
	libraries.  If that fails, search also in /usr/local.

2007-08-12  Mike Sperber  <mike@xemacs.org>

	* Makefile.in.in (datarootdir): Add.
	* configure.ac (infodir): Now in terms of $(datarootdir).
	(mandir): Ditto, making it usually point to $(prefix)/share/man,
	conformant with the GNU Coding Standards.

2007-07-31  Mike Sperber  <mike@xemacs.org>

	* configure.ac: Don't divert `share' to `lib' for datadir.
	Also, define AC_DATAROOTDIR_CHECKED to shut up autoconf.

2007-05-21  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.28 "fuki" is released.

2007-05-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* configure.ac (error-checking): Move comma misplaced by sorting.
	* configure: Regenerate.

2007-05-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* configure.ac (error-checking): Reorder arguments and sync doctring.

2007-03-14  Stephen J. Turnbull  <stephen@xemacs.org>

	* PROBLEMS: describe crash when inserting or displaying a TAB.
	Thanks to Aidan Kehoe for the diagnosis.

2006-12-24  Stephen J. Turnbull  <stephen@xemacs.org>

	* configure.ac (ar): Sun has it but hides it; check for it.
	(ssize_t): Use the modern check and document todo.

2007-02-16  Stephen J. Turnbull  <stephen@xemacs.org>

	* configure.ac (canna):
	Move #define of CANNA_NEW_WCHAR_AWARE to config.h.
	Use -DCANNA_NEW_WCHAR_AWARE since check for RK.h fails otherwise.
	Refactor into loops over orthogonal tweaks (prefix and define).
	Use have_canna to track detection success, not with_canna.
	Add AC_MSG_WARNs documenting autoconf's bogosity (ours, too).

2007-01-01  Malcolm Purvis  <malcolmp@xemacs.org>